MILO: extend side-by-side infra console.
TBR=hinoka@chromium.org

Bug: 767690
Change-Id: I8770a10d215f72ddaf2f12411589432d1025a929
Reviewed-on: https://chromium-review.googlesource.com/724060
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/luci-milo.cfg
+++ b/luci-milo.cfg
@@ -57,17 +57,154 @@ consoles: {
   }
 }
 
-Consoles: {
-  ID: "infra-side-by-side"
-  Name: "infra/infra repository console LUCI along side Buildbot"
-  RepoURL: "https://chromium.googlesource.com/infra/infra"
-  Ref: "refs/heads/master"
-  ManifestName: "REVISION"
+consoles: {
+  id: "infra-side-by-side"
+  name: "infra/infra repository console LUCI along side Buildbot"
+  repo_url: "https://chromium.googlesource.com/infra/infra"
+  ref: "refs/heads/master"
+  manifest_name: "REVISION"
 
-  Builders: {
-    Name: "buildbucket/luci.infra.ci/infra-continuous-trusty-64"
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-trusty-64"
+    short_name: "t6L"
   }
-  Builders: {
-    Name: "buildbot/chromium.infra/infra-continuous-trusty-64"
+  builders: {
+    name: "buildbot/chromium.infra/infra-continuous-trusty-64"
+    short_name: "t6B"
+  }
+
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-zesty-64"
+    short_name: "z6L"
+  }
+  builders: {
+    name: "buildbot/chromium.infra/infra-continuous-zesty-64"
+    short_name: "z6B"
+  }
+
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-yakkety-64"
+    short_name: "y6L"
+  }
+  builders: {
+    name: "buildbot/chromium.infra/infra-continuous-yakkety-64"
+    short_name: "y6B"
+  }
+
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-xenial-64"
+    short_name: "x6L"
+  }
+  builders: {
+    name: "buildbot/chromium.infra/infra-continuous-xenial-64"
+    short_name: "x6B"
+  }
+
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-trusty-64"
+    short_name: "t6L"
+  }
+  builders: {
+    name: "buildbot/chromium.infra/infra-continuous-trusty-64"
+    short_name: "t6B"
+  }
+
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-trusty-32"
+    short_name: "t3L"
+  }
+  builders: {
+    name: "buildbot/chromium.infra/infra-continuous-trusty-32"
+    short_name: "t3B"
+  }
+
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-precise-64"
+    short_name: "p6L"
+  }
+  builders: {
+    name: "buildbot/chromium.infra/infra-continuous-precise-64"
+    short_name: "p6B"
+  }
+
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-precise-32"
+    short_name: "p3L"
+  }
+  builders: {
+    name: "buildbot/chromium.infra/infra-continuous-precise-32"
+    short_name: "p3B"
+  }
+
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.13-64"
+    short_name: "m6L"
+  }
+  builders: {
+    name: "buildbot/chromium.infra/infra-continuous-mac-10.13-64"
+    short_name: "m6B"
+  }
+
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.12-64"
+    short_name: "m6L"
+  }
+  builders: {
+    name: "buildbot/chromium.infra/infra-continuous-mac-10.12-64"
+    short_name: "m6B"
+  }
+
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.11-64"
+    short_name: "m6L"
+  }
+  builders: {
+    name: "buildbot/chromium.infra/infra-continuous-mac-10.11-64"
+    short_name: "m6B"
+  }
+
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.10-64"
+    short_name: "m6L"
+  }
+  builders: {
+    name: "buildbot/chromium.infra/infra-continuous-mac-10.10-64"
+    short_name: "m6B"
+  }
+
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.9-64"
+    short_name: "m6L"
+  }
+  builders: {
+    name: "buildbot/chromium.infra/infra-continuous-mac-10.9-64"
+    short_name: "m6B"
+  }
+
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-win7-64"
+    short_name: "w6L"
+  }
+  builders: {
+    name: "buildbot/chromium.infra/infra-continuous-win7-64"
+    short_name: "w6B"
+  }
+
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-win7-32"
+    short_name: "w3L"
+  }
+  builders: {
+    name: "buildbot/chromium.infra/infra-continuous-win7-32"
+    short_name: "w3B"
+  }
+
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-win10-64"
+    short_name: "w6L"
+  }
+  builders: {
+    name: "buildbot/chromium.infra/infra-continuous-win10-64"
+    short_name: "w6B"
   }
 }
