Fix infra's MILO console wrt to win builders.
TBR=hinoka@chromium.org

Change-Id: Ife89bc102fa8943afd00d81274a87a27777bd126
Reviewed-on: https://chromium-review.googlesource.com/724741
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/luci-milo.cfg
+++ b/luci-milo.cfg
@@ -186,7 +186,7 @@ consoles: {
     short_name: "w6L"
   }
   builders: {
-    name: "buildbot/chromium.infra/infra-continuous-win7-64"
+    name: "buildbot/chromium.infra/infra-continuous-win-64"
     short_name: "w6B"
   }
 
@@ -195,7 +195,7 @@ consoles: {
     short_name: "w3L"
   }
   builders: {
-    name: "buildbot/chromium.infra/infra-continuous-win7-32"
+    name: "buildbot/chromium.infra/infra-continuous-win-64"
     short_name: "w3B"
   }
 
@@ -203,8 +203,5 @@ consoles: {
     name: "buildbucket/luci.infra.ci/infra-continuous-win10-64"
     short_name: "w6L"
   }
-  builders: {
-    name: "buildbot/chromium.infra/infra-continuous-win10-64"
-    short_name: "w6B"
-  }
+  # buildbot CI doens't have Win10 builder.
 }
