infra-side-by-site: Add categories to builders
Also rearranged the builders and fixed a few typos.

Bug: 767690
Change-Id: I2ce7bfcdcaf35053b26ce0605c25b7de6fa5fcdb
TBR: tandrii
Reviewed-on: https://chromium-review.googlesource.com/724685
Reviewed-by: Ryan Tseng <hinoka@chromium.org>

--- a/luci-milo.cfg
+++ b/luci-milo.cfg
@@ -65,143 +65,163 @@ consoles: {
   manifest_name: "REVISION"
 
   builders: {
-    name: "buildbucket/luci.infra.ci/infra-continuous-trusty-64"
-    short_name: "t6L"
+    name: "buildbucket/luci.infra.ci/infra-continuous-precise-32"
+    short_name: "l"
+    category: "linux|32 bit|p"
   }
   builders: {
-    name: "buildbot/chromium.infra/infra-continuous-trusty-64"
-    short_name: "t6B"
-  }
-
-  builders: {
-    name: "buildbucket/luci.infra.ci/infra-continuous-zesty-64"
-    short_name: "z6L"
-  }
-  builders: {
-    name: "buildbot/chromium.infra/infra-continuous-zesty-64"
-    short_name: "z6B"
-  }
-
-  builders: {
-    name: "buildbucket/luci.infra.ci/infra-continuous-yakkety-64"
-    short_name: "y6L"
-  }
-  builders: {
-    name: "buildbot/chromium.infra/infra-continuous-yakkety-64"
-    short_name: "y6B"
-  }
-
-  builders: {
-    name: "buildbucket/luci.infra.ci/infra-continuous-xenial-64"
-    short_name: "x6L"
-  }
-  builders: {
-    name: "buildbot/chromium.infra/infra-continuous-xenial-64"
-    short_name: "x6B"
-  }
-
-  builders: {
-    name: "buildbucket/luci.infra.ci/infra-continuous-trusty-64"
-    short_name: "t6L"
-  }
-  builders: {
-    name: "buildbot/chromium.infra/infra-continuous-trusty-64"
-    short_name: "t6B"
+    name: "buildbot/chromium.infra/infra-continuous-precise-32"
+    short_name: "b"
+    category: "linux|32 bit|p"
   }
 
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-trusty-32"
-    short_name: "t3L"
+    short_name: "l"
+    category: "linux|32 bit|t"
   }
   builders: {
     name: "buildbot/chromium.infra/infra-continuous-trusty-32"
-    short_name: "t3B"
+    short_name: "b"
+    category: "linux|32 bit|t"
   }
+
 
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-precise-64"
-    short_name: "p6L"
+    short_name: "l"
+    category: "linux|64 bit|p"
   }
   builders: {
     name: "buildbot/chromium.infra/infra-continuous-precise-64"
-    short_name: "p6B"
+    short_name: "b"
+    category: "linux|64 bit|p"
+  }
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-trusty-64"
+    short_name: "l"
+    category: "linux|64 bit|t"
+  }
+  builders: {
+    name: "buildbot/chromium.infra/infra-continuous-trusty-64"
+    short_name: "b"
+    category: "linux|64 bit|t"
+  }
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-xenial-64"
+    short_name: "l"
+    category: "linux|64 bit|x"
+  }
+  builders: {
+    name: "buildbot/chromium.infra/infra-continuous-xenial-64"
+    short_name: "b"
+    category: "linux|64 bit|x"
   }
 
   builders: {
-    name: "buildbucket/luci.infra.ci/infra-continuous-precise-32"
-    short_name: "p3L"
+    name: "buildbucket/luci.infra.ci/infra-continuous-yakkety-64"
+    short_name: "l"
+    category: "linux|64 bit|y"
   }
   builders: {
-    name: "buildbot/chromium.infra/infra-continuous-precise-32"
-    short_name: "p3B"
-  }
-
-  builders: {
-    name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.13-64"
-    short_name: "m6L"
-  }
-  builders: {
-    name: "buildbot/chromium.infra/infra-continuous-mac-10.13-64"
-    short_name: "m6B"
+    name: "buildbot/chromium.infra/infra-continuous-yakkety-64"
+    short_name: "b"
+    category: "linux|64 bit|y"
   }
 
   builders: {
-    name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.12-64"
-    short_name: "m6L"
+    name: "buildbucket/luci.infra.ci/infra-continuous-zesty-64"
+    short_name: "l"
+    category: "linux|64 bit|z"
   }
   builders: {
-    name: "buildbot/chromium.infra/infra-continuous-mac-10.12-64"
-    short_name: "m6B"
-  }
-
-  builders: {
-    name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.11-64"
-    short_name: "m6L"
-  }
-  builders: {
-    name: "buildbot/chromium.infra/infra-continuous-mac-10.11-64"
-    short_name: "m6B"
-  }
-
-  builders: {
-    name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.10-64"
-    short_name: "m6L"
-  }
-  builders: {
-    name: "buildbot/chromium.infra/infra-continuous-mac-10.10-64"
-    short_name: "m6B"
+    name: "buildbot/chromium.infra/infra-continuous-zesty-64"
+    short_name: "b"
+    category: "linux|64 bit|z"
   }
 
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.9-64"
-    short_name: "m6L"
+    short_name: "l"
+    category: "mac|10.9"
   }
   builders: {
     name: "buildbot/chromium.infra/infra-continuous-mac-10.9-64"
-    short_name: "m6B"
+    short_name: "b"
+    category: "mac|10.9"
   }
 
   builders: {
-    name: "buildbucket/luci.infra.ci/infra-continuous-win7-64"
-    short_name: "w6L"
+    name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.10-64"
+    short_name: "l"
+    category: "mac|10.10"
   }
   builders: {
-    name: "buildbot/chromium.infra/infra-continuous-win-64"
-    short_name: "w6B"
+    name: "buildbot/chromium.infra/infra-continuous-mac-10.10-64"
+    short_name: "b"
+    category: "mac|10.10"
+  }
+
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.11-64"
+    short_name: "l"
+    category: "mac|10.11"
+  }
+  builders: {
+    name: "buildbot/chromium.infra/infra-continuous-mac-10.11-64"
+    short_name: "b"
+    category: "mac|10.11"
+  }
+
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.12-64"
+    short_name: "l"
+    category: "mac|10.12"
+  }
+  builders: {
+    name: "buildbot/chromium.infra/infra-continuous-mac-10.12-64"
+    short_name: "b"
+    category: "mac|10.12"
+  }
+
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.13-64"
+    short_name: "l"
+    category: "mac|10.13"
+  }
+  builders: {
+    name: "buildbot/chromium.infra/infra-continuous-mac-10.13-64"
+    short_name: "b"
+    category: "mac|10.13"
   }
 
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-win7-32"
-    short_name: "w3L"
+    short_name: "l"
+    category: "win|32 bit|7"
+  }
+  builders: {
+    name: "buildbot/chromium.infra/infra-continuous-win-32"
+    short_name: "b"
+    category: "win|32 bit|7"
+  }
+
+
+  builders: {
+    name: "buildbucket/luci.infra.ci/infra-continuous-win7-64"
+    short_name: "l"
+    category: "win|64 bit|7"
   }
   builders: {
     name: "buildbot/chromium.infra/infra-continuous-win-64"
-    short_name: "w3B"
+    short_name: "b"
+    category: "win|64 bit|7"
   }
 
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-win10-64"
-    short_name: "w6L"
+    short_name: "l"
+    category: "win|64 bit|10"
   }
   # buildbot CI doens't have Win10 builder.
 }
