--- a/luci-milo.cfg
+++ b/luci-milo.cfg
@@ -67,77 +67,77 @@ consoles: {
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-precise-32"
     short_name: "l"
-    category: "linux|32 bit|p"
+    category: "linux|32 bit|precise"
   }
   builders: {
     name: "buildbot/chromium.infra/infra-continuous-precise-32"
     short_name: "b"
-    category: "linux|32 bit|p"
+    category: "linux|32 bit|precise"
   }
 
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-trusty-32"
     short_name: "l"
-    category: "linux|32 bit|t"
+    category: "linux|32 bit|trusty"
   }
   builders: {
     name: "buildbot/chromium.infra/infra-continuous-trusty-32"
     short_name: "b"
-    category: "linux|32 bit|t"
+    category: "linux|32 bit|trusty"
   }
 
 
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-precise-64"
     short_name: "l"
-    category: "linux|64 bit|p"
+    category: "linux|64 bit|precise"
   }
   builders: {
     name: "buildbot/chromium.infra/infra-continuous-precise-64"
     short_name: "b"
-    category: "linux|64 bit|p"
+    category: "linux|64 bit|precise"
   }
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-trusty-64"
     short_name: "l"
-    category: "linux|64 bit|t"
+    category: "linux|64 bit|trusty"
   }
   builders: {
     name: "buildbot/chromium.infra/infra-continuous-trusty-64"
     short_name: "b"
-    category: "linux|64 bit|t"
+    category: "linux|64 bit|trusty"
   }
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-xenial-64"
     short_name: "l"
-    category: "linux|64 bit|x"
+    category: "linux|64 bit|xenial"
   }
   builders: {
     name: "buildbot/chromium.infra/infra-continuous-xenial-64"
     short_name: "b"
-    category: "linux|64 bit|x"
+    category: "linux|64 bit|xenial"
   }
 
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-yakkety-64"
     short_name: "l"
-    category: "linux|64 bit|y"
+    category: "linux|64 bit|yakkety"
   }
   builders: {
     name: "buildbot/chromium.infra/infra-continuous-yakkety-64"
     short_name: "b"
-    category: "linux|64 bit|y"
+    category: "linux|64 bit|yakkety"
   }
 
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-zesty-64"
     short_name: "l"
-    category: "linux|64 bit|z"
+    category: "linux|64 bit|zesty"
   }
   builders: {
     name: "buildbot/chromium.infra/infra-continuous-zesty-64"
     short_name: "b"
-    category: "linux|64 bit|z"
+    category: "linux|64 bit|zesty"
   }
 
   builders: {
