Milo infra console: emoticons attempt #1.
TBR=hinoka@chromium.org

Change-Id: Idccf280e896a7acf0156d5cc52fd1d5c1e35115c
Reviewed-on: https://chromium-review.googlesource.com/726255
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/luci-milo.cfg
+++ b/luci-milo.cfg
@@ -66,161 +66,161 @@ consoles: {
 
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-precise-32"
-    short_name: "l"
+    short_name: "🎉"
     category: "linux|32 bit|precise"
   }
   builders: {
     name: "buildbot/chromium.infra/infra-continuous-precise-32"
-    short_name: "b"
+    short_name: "💣"
     category: "linux|32 bit|precise"
   }
 
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-trusty-32"
-    short_name: "l"
+    short_name: "🎉"
     category: "linux|32 bit|trusty"
   }
   builders: {
     name: "buildbot/chromium.infra/infra-continuous-trusty-32"
-    short_name: "b"
+    short_name: "💣"
     category: "linux|32 bit|trusty"
   }
 
 
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-precise-64"
-    short_name: "l"
+    short_name: "🎉"
     category: "linux|64 bit|precise"
   }
   builders: {
     name: "buildbot/chromium.infra/infra-continuous-precise-64"
-    short_name: "b"
+    short_name: "💣"
     category: "linux|64 bit|precise"
   }
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-trusty-64"
-    short_name: "l"
+    short_name: "🎉"
     category: "linux|64 bit|trusty"
   }
   builders: {
     name: "buildbot/chromium.infra/infra-continuous-trusty-64"
-    short_name: "b"
+    short_name: "💣"
     category: "linux|64 bit|trusty"
   }
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-xenial-64"
-    short_name: "l"
+    short_name: "🎉"
     category: "linux|64 bit|xenial"
   }
   builders: {
     name: "buildbot/chromium.infra/infra-continuous-xenial-64"
-    short_name: "b"
+    short_name: "💣"
     category: "linux|64 bit|xenial"
   }
 
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-yakkety-64"
-    short_name: "l"
+    short_name: "🎉"
     category: "linux|64 bit|yakkety"
   }
   builders: {
     name: "buildbot/chromium.infra/infra-continuous-yakkety-64"
-    short_name: "b"
+    short_name: "💣"
     category: "linux|64 bit|yakkety"
   }
 
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-zesty-64"
-    short_name: "l"
+    short_name: "🎉"
     category: "linux|64 bit|zesty"
   }
   builders: {
     name: "buildbot/chromium.infra/infra-continuous-zesty-64"
-    short_name: "b"
+    short_name: "💣"
     category: "linux|64 bit|zesty"
   }
 
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.9-64"
-    short_name: "l"
+    short_name: "🎉"
     category: "mac|10.9"
   }
   builders: {
     name: "buildbot/chromium.infra/infra-continuous-mac-10.9-64"
-    short_name: "b"
+    short_name: "💣"
     category: "mac|10.9"
   }
 
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.10-64"
-    short_name: "l"
+    short_name: "🎉"
     category: "mac|10.10"
   }
   builders: {
     name: "buildbot/chromium.infra/infra-continuous-mac-10.10-64"
-    short_name: "b"
+    short_name: "💣"
     category: "mac|10.10"
   }
 
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.11-64"
-    short_name: "l"
+    short_name: "🎉"
     category: "mac|10.11"
   }
   builders: {
     name: "buildbot/chromium.infra/infra-continuous-mac-10.11-64"
-    short_name: "b"
+    short_name: "💣"
     category: "mac|10.11"
   }
 
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.12-64"
-    short_name: "l"
+    short_name: "🎉"
     category: "mac|10.12"
   }
   builders: {
     name: "buildbot/chromium.infra/infra-continuous-mac-10.12-64"
-    short_name: "b"
+    short_name: "💣"
     category: "mac|10.12"
   }
 
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-mac-10.13-64"
-    short_name: "l"
+    short_name: "🎉"
     category: "mac|10.13"
   }
   builders: {
     name: "buildbot/chromium.infra/infra-continuous-mac-10.13-64"
-    short_name: "b"
+    short_name: "💣"
     category: "mac|10.13"
   }
 
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-win7-32"
-    short_name: "l"
+    short_name: "🎉"
     category: "win|32 bit|7"
   }
   builders: {
     name: "buildbot/chromium.infra/infra-continuous-win-32"
-    short_name: "b"
+    short_name: "💣"
     category: "win|32 bit|7"
   }
 
 
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-win7-64"
-    short_name: "l"
+    short_name: "🎉"
     category: "win|64 bit|7"
   }
   builders: {
     name: "buildbot/chromium.infra/infra-continuous-win-64"
-    short_name: "b"
+    short_name: "💣"
     category: "win|64 bit|7"
   }
 
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-win10-64"
-    short_name: "l"
+    short_name: "🎉"
     category: "win|64 bit|10"
   }
   # buildbot CI doens't have Win10 builder.
