--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -187,13 +187,12 @@ buckets {
       dimensions: "cpu:x86-32"
     }
 
-    # TODO(tandrii): add hardware and re-enable.
-    # builders {
-    #   name: "infra-continuous-win10-64"
-    #   mixins: "infra ci"
-    #   dimensions: "os:Windows-10"
-    #   dimensions: "cpu:x86-64"
-    # }
+    builders {
+      name: "infra-continuous-win10-64"
+      mixins: "infra ci"
+      dimensions: "os:Windows-10"
+      dimensions: "cpu:x86-64"
+    }
 
 
     # TODO(tandrii): luci-gae + luci-go.
