--- a/luci-scheduler.cfg
+++ b/luci-scheduler.cfg
@@ -43,8 +43,7 @@ trigger {
   triggers: "infra-continuous-mac-10.9-64"
   triggers: "infra-continuous-win7-64"
   triggers: "infra-continuous-win7-32"
-  # TODO(tandrii): enable this builder.
-  # triggers: "infra-continuous-win10-64"
+  triggers: "infra-continuous-win10-64"
 }
 
 # Variety of Ubuntu builders.
@@ -189,8 +188,6 @@ job {
 }
 job {
   id: "infra-continuous-win10-64"
-  # TODO(tAndrii): re-enable this builder.
-  disabled: true
   acl_sets: "default"
   buildbucket: {
     server: "cr-buildbucket.appspot.com"
