Minor cleanup of buildbucket config.
* Use correct try access group.
* Stop using dead or deprecated features (allow_milo:1 and url_format).
* More consistently use acl_sets and builder_mixins.

R=nodir@chromium.org, tandrii@chromium.org

Change-Id: I3152296fa7e8ba34523bf3c28cac891176244a95
Reviewed-on: https://chromium-review.googlesource.com/729464
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -18,9 +18,7 @@ acl_sets {
   name: "try"
   acls {
     role: SCHEDULER
-    # This whitelists largest number of people who are trusted to schedule
-    # arbitrary tryjobs for unreviewed CLs.
-    group: "project-chromium-tryjob-access"
+    group: "project-infra-tryjob-access"
   }
   acls {
     role: SCHEDULER
@@ -28,9 +26,16 @@ acl_sets {
   }
 }
 
+acl_sets {
+  name: "ci"
+  acls {
+    role: SCHEDULER
+    identity: "luci-scheduler@appspot.gserviceaccount.com"
+  }
+}
+
 builder_mixins {
   name: "default"
-  swarming_tags: "allow_milo:1"
 
   dimensions: "cpu:x86-64"
 
@@ -79,10 +84,7 @@ builder_mixins {
 buckets {
   name: "luci.infra.ci"
   acl_sets: "public"
-  acls {
-    role: SCHEDULER
-    identity: "luci-scheduler@appspot.gserviceaccount.com"
-  }
+  acl_sets: "ci"
 
   swarming {
     hostname: "chromium-swarm.appspot.com"
@@ -206,7 +208,6 @@ buckets {
 
   swarming {
     hostname: "chromium-swarm.appspot.com"
-    url_format: "https://luci-milo.appspot.com/swarming/task/{task_id}"
     task_template_canary_percentage { value: 30 }
 
     builder_defaults {
@@ -260,67 +261,52 @@ buckets {
     builders {
       category: "Luci-go"
       name: "Luci-go Linux Trusty 32-on-64 Tester"
+      mixins: "infra gclient checkout with Go env"
       dimensions: "os:Ubuntu-14.04"
       recipe {
         name: "luci_go"
         properties: "GOARCH:386"
-      }
-      caches {
-        path: "infra_gclient_with_go"
-        name: "infra_gclient_with_go"
       }
     }
 
     builders {
       category: "Luci-go"
       name: "Luci-go Linux Trusty 64 Tester"
+      mixins: "infra gclient checkout with Go env"
       dimensions: "os:Ubuntu-14.04"
       recipe {
         name: "luci_go"
-      }
-      caches {
-        path: "infra_gclient_with_go"
-        name: "infra_gclient_with_go"
       }
     }
 
     builders {
       category: "Luci-go"
       name: "Luci-go Mac Tester"
+      mixins: "infra gclient checkout with Go env"
       dimensions: "os:Mac-10.9"
       recipe {
         name: "luci_go"
-      }
-      caches {
-        path: "infra_gclient_with_go"
-        name: "infra_gclient_with_go"
       }
     }
 
     builders {
       category: "Luci-go"
       name: "Luci-go Presubmit"
+      mixins: "infra gclient checkout with Go env"
       dimensions: "os:Ubuntu-14.04"
       recipe {
         name: "luci_go"
         properties_j: "presubmit:true"
-      }
-      caches {
-        path: "infra_gclient_with_go"
-        name: "infra_gclient_with_go"
       }
     }
 
     builders {
       category: "Luci-go"
       name: "Luci-go Win Tester"
+      mixins: "infra gclient checkout with Go env"
       dimensions: "os:Windows-7-SP1"
       recipe {
         name: "luci_go"
-      }
-      caches {
-        path: "infra_gclient_with_go"
-        name: "infra_gclient_with_go"
       }
     }
 
