Enable LUCI-based git auth on luci.infra.{ci,try} buckets.
R=tandrii@chromium.org
BUG=776035

Change-Id: I3e1ee1a432bada2aa72dfe99015407fc0ca596b2
Reviewed-on: https://chromium-review.googlesource.com/729745
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -91,9 +91,16 @@ buckets {
 
     builder_defaults {
       mixins: "default"
+
       # https://chromium-swarm.appspot.com/botlist?c=id&c=os&c=task&c=status&f=pool%3Aluci.infra.ci
       dimensions: "pool:luci.infra.ci"
+
       build_numbers: true
+
+      service_account: "infra-ci-builder@chops-service-accounts.iam.gserviceaccount.com"
+      recipe {
+        properties_j: "$kitchen:{\"git_auth\": true}"
+      }
     }
 
     ###########################################################################
@@ -212,8 +219,14 @@ buckets {
 
     builder_defaults {
       mixins: "default"
+
       # https://chromium-swarm.appspot.com/botlist?c=id&c=os&c=task&c=status&f=pool%3Aluci.infra.try
       dimensions: "pool:luci.infra.try"
+
+      service_account: "infra-try-builder@chops-service-accounts.iam.gserviceaccount.com"
+      recipe {
+        properties_j: "$kitchen:{\"git_auth\": true}"
+      }
     }
 
 
