Nitfixes in MILO config.
R=nodir@chromium.org

Bug: 767690
Change-Id: I4ac318c2d1181c2c5603d1a83a6f01ae2ac86c09
Reviewed-on: https://chromium-review.googlesource.com/745382
Reviewed-by: Nodir Turakulov <nodir@chromium.org>

--- a/luci-milo.cfg
+++ b/luci-milo.cfg
@@ -59,7 +59,7 @@ consoles: {
 
 consoles: {
   id: "infra-side-by-side"
-  name: "infra/infra repository console LUCI along side Buildbot"
+  name: "infra/infra repository console with LUCI along side Buildbot"
   repo_url: "https://chromium.googlesource.com/infra/infra"
   ref: "refs/heads/master"
   manifest_name: "REVISION"
@@ -227,8 +227,6 @@ consoles: {
 }
 
 
-
-
 consoles: {
   id: "luci-go"
   name: "luci-go repository console"
@@ -274,7 +272,7 @@ consoles: {
 
 consoles: {
   id: "luci-go-side-by-side"
-  name: "infra/infra repository console LUCI along side Buildbot"
+  name: "luci-go repository console with LUCI along side Buildbot"
   repo_url: "https://chromium.googlesource.com/infra/infra"
   ref: "refs/heads/master"
   manifest_name: "REVISION"
@@ -323,8 +321,6 @@ consoles: {
     category: "win|64"
   }
 }
-
-
 
 
 consoles: {
