Fix repo url in side-by-side luci-go console.
TBR=nodir@chromium.org

Bug: 767690
Change-Id: Ia96ae083d4ef05c21745c230fe598d9a88bacd0c
Reviewed-on: https://chromium-review.googlesource.com/745385
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/luci-milo.cfg
+++ b/luci-milo.cfg
@@ -273,7 +273,7 @@ consoles: {
 consoles: {
   id: "luci-go-side-by-side"
   name: "luci-go repository console with LUCI along side Buildbot"
-  repo_url: "https://chromium.googlesource.com/infra/infra"
+  repo_url: "https://chromium.googlesource.com/infra/luci/luci-go"
   ref: "refs/heads/master"
   manifest_name: "REVISION"
 
