Moving first builder to luci.infra.xxx.try to just luci.infra.try.
I'm copying "infra Roll Tester" in luci.infra.build.try to
"Recipe Roll Tester from Build to Infra" to ensure name is unique in
shared .try bucket.

Next, change CQ to use new one, see how that goes, and then do a batch
of remaining builders.

TBR=nodir@chromium.org, phajdan@chromium.org

Change-Id: I36f8cb4554a2209a332d45cda3017b74e90358c0
Bug: 780352
Reviewed-on: https://chromium-review.googlesource.com/748424
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -454,6 +454,18 @@ buckets {
     }
 
     builders {
+      category: "Recipes-py"
+      name: "Recipes-py Presubmit"
+      dimensions: "os:Ubuntu-14.04"
+      recipe {
+        repository: "https://chromium.googlesource.com/chromium/tools/build"
+        name: "run_presubmit"
+        properties: "repo_name:recipes_py"
+        properties_j: "runhooks:true"
+      }
+    }
+
+    builders {
       category: "Recipe Roll Tryjob"
       name: "Recipe Roll Downstream Tester"
       dimensions: "os:Ubuntu-14.04"
@@ -463,14 +475,11 @@ buckets {
     }
 
     builders {
-      category: "Recipes-py"
-      name: "Recipes-py Presubmit"
-      dimensions: "os:Ubuntu-14.04"
+      name: "Recipe Roll Tester from Build to Infra"
       recipe {
-        repository: "https://chromium.googlesource.com/chromium/tools/build"
-        name: "run_presubmit"
-        properties: "repo_name:recipes_py"
-        properties_j: "runhooks:true"
+        name: "recipe_roll_tryjob"
+        properties: "upstream_project:build"
+        properties: "downstream_project:infra"
       }
     }
   }
