Setup gsutil-hello-world test builder
Change-Id: If065ae4afda28a9eb37fdf02e41a809c32d5f2e8
Reviewed-on: https://chromium-review.googlesource.com/750266
Reviewed-by: Vadim Shtayura <vadimsh@chromium.org>

--- a/cr-buildbucket-dev.cfg
+++ b/cr-buildbucket-dev.cfg
@@ -70,5 +70,16 @@ buckets {
         properties_j: "$kitchen:{\"git_auth\": true}"
       }
     }
+
+    builders {
+      name: "gsutil-hello-world-trusty-64"
+      dimensions: "os:Ubuntu-14.04"
+      dimensions: "cpu:x86-64"
+      recipe {
+        name: "gsutil_hello_world"
+        repository: "https://chromium.googlesource.com/infra/infra"
+        properties_j: "$kitchen:{\"devshell\": true}"
+      }
+    }
   }
 }
