--- a/luci-scheduler-dev.cfg
+++ b/luci-scheduler-dev.cfg
@@ -85,3 +85,14 @@ job {
     builder: "gerrit-hello-world-trusty-64"
   }
 }
+
+job {
+  id: "gsutil-hello-world-trusty-64"
+  acl_sets: "default"
+  schedule: "triggered"
+  buildbucket: {
+    server: "cr-buildbucket-dev.appspot.com"
+    bucket: "luci.infra.continuous"
+    builder: "gsutil-hello-world-trusty-64"
+  }
+}
