Add missing dimension to try builder and remove extra \n lines.
R=nodir@chromium.org

Bug: 780352
Change-Id: I71bdf0fc2a25910a7ab45509df5251cb5bddbfc3
Reviewed-on: https://chromium-review.googlesource.com/748974
Reviewed-by: Nodir Turakulov <nodir@chromium.org>

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -207,7 +207,6 @@ buckets {
     }
 
 
-
     ##########################################################################
     ### luci-go builders
 
@@ -465,6 +464,9 @@ buckets {
       }
     }
 
+    ###########################################################################
+    # Downstream recipe roller testers.
+
     builders {
       category: "Recipe Roll Tryjob"
       name: "Recipe Roll Downstream Tester"
@@ -476,6 +478,7 @@ buckets {
 
     builders {
       name: "Recipe Roll Tester from Build to Infra"
+      dimensions: "os:Ubuntu-14.04"
       recipe {
         name: "recipe_roll_tryjob"
         properties: "upstream_project:build"
