--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -508,70 +508,59 @@ buckets {
       }
     }
 
+    # Recipe rolls from Recipe Engine.
+
     builders {
-      name: "Recipe Roll Tester from Build to Infra"
-      dimensions: "os:Ubuntu-14.04"
+      name: "Depot Tools downstream Recipe Roll tester from Recipe Engine"
       recipe {
-        name: "recipe_roll_tryjob"
-        properties: "upstream_project:build"
-        properties: "downstream_project:infra"
-      }
-    }
-  }
-}
-
-# TODO(tandrii): move these builders to bucket luci.infra.try.
-buckets {
-  name: "luci.infra.recipe_engine.try"
-  acl_sets: "public"
-  acl_sets: "try"
-
-  swarming {
-    hostname: "chromium-swarm.appspot.com"
-
-    builder_defaults {
-      mixins: "default"
-      # https://chromium-swarm.appspot.com/botlist?c=id&c=os&c=task&c=status&f=pool%3Aluci.infra.try
-      dimensions: "pool:luci.infra.try"
-      dimensions: "os:Ubuntu-14.04"
-      recipe {
-        name: "recipe_roll_tryjob"
         properties: "upstream_project:recipe_engine"
-      }
-    }
-
-    builders {
-      name: "depot_tools Roll Tester"
-      recipe {
         properties: "downstream_project:depot_tools"
       }
     }
 
     builders {
+      name: "Build downstream Recipe Roll tester from Recipe Engine"
       name: "build Roll Tester"
       recipe {
+        properties: "upstream_project:recipe_engine"
         properties: "downstream_project:build"
       }
     }
 
     builders {
+      name: "Infra downstream Recipe Roll tester from Recipe Engine"
       name: "infra Roll Tester"
       recipe {
+        properties: "upstream_project:recipe_engine"
         properties: "downstream_project:infra"
       }
     }
 
     builders {
-      name: "skia Roll Tester"
+      name: "Skia downstream Recipe Roll tester from Recipe Engine"
       recipe {
+        properties: "upstream_project:recipe_engine"
         properties: "downstream_project:skia"
       }
     }
 
     builders {
-      name: "skiabuildbot Roll Tester"
+      name: "Skia Buildbot downstream Recipe Roll tester from Recipe Engine"
       recipe {
+        properties: "upstream_project:recipe_engine"
         properties: "downstream_project:skiabuildbot"
+      }
+    }
+
+    # Recipe rolls from Build.
+
+    builders {
+      name: "Infra downstream Recipe Roll tester from Build"
+      dimensions: "os:Ubuntu-14.04"
+      recipe {
+        name: "recipe_roll_tryjob"
+        properties: "upstream_project:build"
+        properties: "downstream_project:infra"
       }
     }
   }
