infra/infra console: add header.
TBR=hinoka@chromium.org

Change-Id: Ia99356fccf7d8f848981dcd1a31ef85efb767adf
Reviewed-on: https://chromium-review.googlesource.com/754330
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>
Reviewed-by: Ryan Tseng <hinoka@chromium.org>

--- a/luci-milo.cfg
+++ b/luci-milo.cfg
@@ -5,7 +5,54 @@ consoles: {
   ref: "refs/heads/master"
   manifest_name: "REVISION"
 
-  # TODO(tAndrii): add header.
+  header: {
+    oncalls: {
+      name: "Trooper"
+      url: "https://build.chromium.org/p/chromium/trooper.json"
+    }
+
+    links: {
+      name: "sources"
+      links: {
+        text: "infra/infra"
+        url: "https://chromium.googlesource.com/infra/infra"
+      }
+      links: {
+        text: "luci-py"
+        url: "https://chromium.googlesource.com/infra/luci/luci-py"
+      }
+      links: {
+        text: "luci-go"
+        url: "https://chromium.googlesource.com/infra/luci/luci-go"
+      }
+      links: {
+        text: "build"
+        url: "https://chromium.googlesource.com/chromium/tools/build"
+      }
+      links: {
+        text: "depot_tools"
+        url: "https://chromium.googlesource.com/chromium/tools/depot_tools"
+      }
+		}
+
+    links: {
+      name: "links"
+      links: {
+        text: "reviews"
+        url: "https://chromium-review.googlesource.com"
+        alt: "Chromium code review tool"
+      }
+      links: {
+        text: "bugs"
+        url: "https://crbug.com"
+        alt: "Chromium bug tracker"
+      }
+      links: {
+        text: "Bug a Trooper"
+        url: "http://g.co/bugatrooper"
+      }
+    }
+  }
 
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-trusty-64"
