Add favicon to infra's console.
TBR=hinoka@chromium.org

Change-Id: Ia9587a9d4dbf5b292e8e26c3d9271ee0aa9705e0
Reviewed-on: https://chromium-review.googlesource.com/754364
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/luci-milo.cfg
+++ b/luci-milo.cfg
@@ -4,6 +4,7 @@ consoles: {
   repo_url: "https://chromium.googlesource.com/infra/infra"
   ref: "refs/heads/master"
   manifest_name: "REVISION"
+  favicon_url: "https://storage.googleapis.com/chrome-infra-public/logo/favicon.ico"
 
   header: {
     oncalls: {
