Add logos to all infra consoles.
TBR=hinoka@chromium.org

Change-Id: I6e40effc4b007072379672bf93c32cb92570042a
Reviewed-on: https://chromium-review.googlesource.com/754369
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/luci-milo.cfg
+++ b/luci-milo.cfg
@@ -111,6 +111,7 @@ consoles: {
   repo_url: "https://chromium.googlesource.com/infra/infra"
   ref: "refs/heads/master"
   manifest_name: "REVISION"
+  favicon_url: "https://storage.googleapis.com/chrome-infra-public/logo/favicon.ico"
 
   builders: {
     name: "buildbucket/luci.infra.ci/infra-continuous-precise-32"
@@ -281,6 +282,7 @@ consoles: {
   repo_url: "https://chromium.googlesource.com/infra/luci/luci-go"
   ref: "refs/heads/master"
   manifest_name: "REVISION"
+  favicon_url: "https://storage.googleapis.com/chrome-infra-public/logo/favicon.ico"
 
   # TODO(tAndrii): add header.
 
@@ -324,6 +326,7 @@ consoles: {
   repo_url: "https://chromium.googlesource.com/infra/luci/luci-go"
   ref: "refs/heads/master"
   manifest_name: "REVISION"
+  favicon_url: "https://storage.googleapis.com/chrome-infra-public/logo/favicon.ico"
 
   builders: {
     name: "buildbucket/luci.infra.ci/luci-go-trusty64"
@@ -377,6 +380,7 @@ consoles: {
   repo_url: "https://chromium.googlesource.com/infra/luci/gae"
   ref: "refs/heads/master"
   manifest_name: "REVISION"
+  favicon_url: "https://storage.googleapis.com/chrome-infra-public/logo/favicon.ico"
 
   # TODO(tAndrii): add header.
 
