Add recipes-tests tests to LUCI infra CI.
R=vadimsh@chromium.org

Bug: 767690
Change-Id: I6b10aeead5010700d0a800782e3f72866351fb2d
Reviewed-on: https://chromium-review.googlesource.com/754343
Reviewed-by: Vadim Shtayura <vadimsh@chromium.org>

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -82,6 +82,17 @@ builder_mixins {
   }
 }
 
+builder_mixins {
+  # Shared by luci-gae Try and CI jobs because recipe is the same.
+  name: "recipe_simulation"
+  mixins: "default"
+  dimensions: "os:Ubuntu-14.04"
+  recipe {
+    repository: "https://chromium.googlesource.com/infra/infra"
+    name: "recipe_simulation"
+  }
+}
+
 
 buckets {
   name: "luci.infra.ci"
@@ -280,6 +291,27 @@ buckets {
       dimensions: "cpu:x86-64"
     }
 
+    ##########################################################################
+    ### recipe-engine builders
+
+    builders {
+      name: "recipe_engine-recipes-tests"
+      mixins: "recipe_simulation"
+      recipe: {
+        properties: "repo_under_test:recipe_engine"
+      }
+    }
+
+    ##########################################################################
+    ### depot_tools builders
+
+    builders {
+      name: "depot_tools-recipes-tests"
+      mixins: "recipe_simulation"
+      recipe: {
+        properties: "repo_under_test:depot_tools"
+      }
+    }
   }
 }
 
