--- a/luci-milo.cfg
+++ b/luci-milo.cfg
@@ -388,3 +388,33 @@ consoles: {
     name: "buildbucket/luci.infra.ci/luci-gae-continuous-trusty-64"
   }
 }
+
+consoles: {
+  id: "recipes-py"
+  name: "recipes-py repository console"
+  repo_url: "https://chromium.googlesource.com/infra/luci/recipes-py"
+  ref: "refs/heads/master"
+  manifest_name: "REVISION"
+  favicon_url: "https://storage.googleapis.com/chrome-infra-public/logo/favicon.ico"
+
+  # TODO(tAndrii): add header.
+
+  builders: {
+    name: "buildbucket/luci.infra.ci/recipe-engine-recipes-tests"
+  }
+}
+
+consoles: {
+  id: "depot_tools"
+  name: "depot_tools repository console"
+  repo_url: "https://chromium.googlesource.com/chromium/tools/depot_tools"
+  ref: "refs/heads/master"
+  manifest_name: "REVISION"
+  favicon_url: "https://storage.googleapis.com/chrome-infra-public/logo/favicon.ico"
+
+  # TODO(tAndrii): add header.
+
+  builders: {
+    name: "buildbucket/luci.infra.ci/depot_tools-recipes-tests"
+  }
+}
