--- a/luci-scheduler.cfg
+++ b/luci-scheduler.cfg
@@ -333,3 +333,53 @@ job {
     builder: "luci-gae-continuous-trusty-64"
   }
 }
+
+################################################################################
+# Depot_tools repository CI.
+
+trigger {
+  id: "depot_tools-gitiles-trigger"
+  acl_sets: "default"
+
+  gitiles: {
+    repo: "https://chromium.googlesource.com/chromium/tools/depot_tools.git"
+    refs: "refs/heads/master"
+  }
+
+  triggers: "depot_tools-recipes-tests"
+}
+
+job {
+  id: "depot_tools-recipes-tests"
+  acl_sets: "default"
+  buildbucket: {
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.infra.ci"
+    builder: "depot_tools-recipes-tests"
+  }
+}
+
+################################################################################
+# Recipes-py (recipe_engine) repository CI.
+
+trigger {
+  id: "recipe_engine-gitiles-trigger"
+  acl_sets: "default"
+
+  gitiles: {
+    repo: "https://chromium.googlesource.com/infra/luci/recipes-py.git"
+    refs: "refs/heads/master"
+  }
+
+  triggers: "recipe_engine-recipes-tests"
+}
+
+job {
+  id: "recipe_engine-recipes-tests"
+  acl_sets: "default"
+  buildbucket: {
+    server: "cr-buildbucket.appspot.com"
+    bucket: "luci.infra.ci"
+    builder: "recipe_engine-recipes-tests"
+  }
+}
