Reland "Move recipe downstream rollers tryjobs to luci.infra.try bucket."
This is a reland of 178df72e61a25ccbc8d78a9704e7471e85648716
Original change's description:
> Move recipe downstream rollers tryjobs to luci.infra.try bucket.
> 
> Corresponding CQ Cls to be landed around the same time:
> * https://chromium-review.googlesource.com/#/c/chromium/tools/build/+/754059
> * https://chromium-review.googlesource.com/#/c/infra/luci/recipes-py/+/754058
> 
> TBR=iannucci@chromium.org
> 
> Bug: 780352
> Change-Id: I91d3abee13bf7f3b9fd1144c89f6e4d5d5c17f04
> Reviewed-on: https://chromium-review.googlesource.com/754054
> Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

TBR=iannucci@chromium.org

Bug: 780352
Change-Id: I8a122df7227903aa24278792d8c2dc2a426d632b
Reviewed-on: https://chromium-review.googlesource.com/755174
Reviewed-by: Andrii Shyshkalov <tandrii@chromium.org>

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -83,13 +83,22 @@ builder_mixins {
 }
 
 builder_mixins {
-  # Shared by luci-gae Try and CI jobs because recipe is the same.
   name: "recipe_simulation"
   mixins: "default"
   dimensions: "os:Ubuntu-14.04"
   recipe {
     repository: "https://chromium.googlesource.com/infra/infra"
     name: "recipe_simulation"
+  }
+}
+
+builder_mixins {
+  name: "recipe_roll_tryjob"
+  mixins: "default"
+  dimensions: "os:Ubuntu-14.04"
+  recipe {
+    repository: "https://chromium.googlesource.com/infra/infra"
+    name: "recipe_roll_tryjob"
   }
 }
 
@@ -500,78 +509,67 @@ buckets {
     # Downstream recipe roller testers.
 
     builders {
-      category: "Recipe Roll Tryjob"
+      # TODO(tandrii): this builder seems to be unused.
       name: "Recipe Roll Downstream Tester"
+      mixins: "recipe_roll_tryjob"
       dimensions: "os:Ubuntu-14.04"
-      recipe {
-        name: "recipe_roll_tryjob"
-      }
     }
+
+    # Recipe rolls from Recipe Engine.
 
     builders {
-      name: "Recipe Roll Tester from Build to Infra"
-      dimensions: "os:Ubuntu-14.04"
+      name: "Depot Tools downstream Recipe Roll tester from Recipe Engine"
+      mixins: "recipe_roll_tryjob"
       recipe {
-        name: "recipe_roll_tryjob"
-        properties: "upstream_project:build"
-        properties: "downstream_project:infra"
-      }
-    }
-  }
-}
-
-# TODO(tandrii): move these builders to bucket luci.infra.try.
-buckets {
-  name: "luci.infra.recipe_engine.try"
-  acl_sets: "public"
-  acl_sets: "try"
-
-  swarming {
-    hostname: "chromium-swarm.appspot.com"
-
-    builder_defaults {
-      mixins: "default"
-      # https://chromium-swarm.appspot.com/botlist?c=id&c=os&c=task&c=status&f=pool%3Aluci.infra.try
-      dimensions: "pool:luci.infra.try"
-      dimensions: "os:Ubuntu-14.04"
-      recipe {
-        name: "recipe_roll_tryjob"
         properties: "upstream_project:recipe_engine"
-      }
-    }
-
-    builders {
-      name: "depot_tools Roll Tester"
-      recipe {
         properties: "downstream_project:depot_tools"
       }
     }
 
     builders {
-      name: "build Roll Tester"
+      name: "Build downstream Recipe Roll tester from Recipe Engine"
+      mixins: "recipe_roll_tryjob"
       recipe {
+        properties: "upstream_project:recipe_engine"
         properties: "downstream_project:build"
       }
     }
 
     builders {
-      name: "infra Roll Tester"
+      name: "Infra downstream Recipe Roll tester from Recipe Engine"
+      mixins: "recipe_roll_tryjob"
       recipe {
+        properties: "upstream_project:recipe_engine"
         properties: "downstream_project:infra"
       }
     }
 
     builders {
-      name: "skia Roll Tester"
+      name: "Skia downstream Recipe Roll tester from Recipe Engine"
+      mixins: "recipe_roll_tryjob"
       recipe {
+        properties: "upstream_project:recipe_engine"
         properties: "downstream_project:skia"
       }
     }
 
     builders {
-      name: "skiabuildbot Roll Tester"
+      name: "Skia Buildbot downstream Recipe Roll tester from Recipe Engine"
+      mixins: "recipe_roll_tryjob"
       recipe {
+        properties: "upstream_project:recipe_engine"
         properties: "downstream_project:skiabuildbot"
+      }
+    }
+
+    # Recipe rolls from Build.
+
+    builders {
+      name: "Infra downstream Recipe Roll tester from Build"
+      mixins: "recipe_roll_tryjob"
+      recipe {
+        properties: "upstream_project:build"
+        properties: "downstream_project:infra"
       }
     }
   }
